<resources>
    <string name="app_name">JogTracker180417</string>
    <string name="email">Email</string>
    <string name="input_email_here">Input email here.</string>
    <string name="password">Password</string>
    <string name="input_password_here">Input password here.</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="finish_sport">finish</string>
    <string name="start_sport">start</string>
    <string name="pause_sport">pause</string>
    <string name="speed">Speed</string>
    <string name="show_distance">Distance</string>
    <string name="show_speed">Speed</string>
    <string name="show_time">Time</string>
    <string name="end_training">Are you sure to end this training?</string>
    <string name="save_training_data">yes</string>
    <string name="back_to_training">no</string>
    <string name="sport_date">Date</string>
    <string name="sport_distance">Distance</string>
    <string name="sport_duration">Duration</string>
    <string name="you_have_run">You have run</string>
    <string name="original_speed">0.0</string>
    <string name="origin_speed">0.0</string>
    <string name="speed_unit">km/h</string>
    <string name="origin_time">00:00</string>
    <string name="speedText">Speed:</string>
    <string name="time_text">Time:</string>
    <string name="origin_distance">0.0</string>
    <string name="distance_unit">km</string>
    <string name="you_ve_run">You\'ve run</string>
    <string name="to_history_page">History</string>
    <string name="to_new_sport">New Sport</string>
    <string name="log_out">Log out</string>
    <string name="bar_title_history">History</string>
    <string name="bar_title_Training">Training</string>
    <string name="bar_title_history_detail">Details</string>
</resources>
