<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/sportDateHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sport_date"
        android:textSize="30sp"/>
    <LinearLayout
        android:id="@+id/displayDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sportDateHistory">

        <TextView
            android:id="@+id/sportDistanceHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/sport_distance"
            android:textSize="40sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distance_unit"
            android:textSize="40sp"/>

    </LinearLayout>


  <LinearLayout
      android:id="@+id/sportSpeedAndDurationHistory"
      android:layout_below="@id/displayDistance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
          android:id="@+id/sportSpeedHistory"
          android:text="@string/show_speed"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="20sp"/>
      <TextView
          android:text="@string/speed_unit"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="20sp"/>
      <TextView
          android:text="@string/time_text"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="20sp"/>
      <TextView
          android:id="@+id/sportDurationHistory"
          android:text="@string/sport_duration"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="20sp"/>

  </LinearLayout>

</RelativeLayout>