<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportHistoryDetails"
    android:orientation="vertical">
    <include
        android:id="@+id/app_bar_on_history_detail"
        layout="@layout/app_bar"/>
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/dateDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="end"/>
    <fragment
        android:layout_marginTop="5dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/mapDetails"/>
   <LinearLayout
       android:layout_marginTop="5dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/distanceDetail"
           android:layout_width="0dp"
           android:layout_height="30dp"
           android:layout_weight="3"
           android:text="@string/origin_distance"
           android:gravity="center"
           android:textSize="20sp"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="30dp"
           android:layout_weight="1"
           android:gravity="center"
           android:textSize="20sp"
           android:text="@string/distance_unit"/>
   </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/speedText"
            android:gravity="center"/>
        <TextView
            android:id="@+id/speedDetail"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/origin_speed"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/speed_unit" />
        <TextView
            android:text="@string/time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/timeDetail"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:text="@string/origin_time"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>